--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Righteous&family=Space+Grotesk:wght@300;400;600&display=swap");
 * {
   margin: 0;
@@ -91,9 +98,12 @@ nav {
 
 .nav-item .nav-link {
   color: white;
+  -webkit-transition: 0.2s ease-in;
+  -o-transition: 0.2s ease-in;
   transition: 0.2s ease-in;
   border-radius: 100px;
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }
 .nav-item .active, .nav-item .nav-link:hover {
   background: rgba(45, 44, 48, 0.4862745098) !important;
@@ -101,7 +111,8 @@ nav {
   color: white;
 }
 .nav-item .active {
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }
 
 .navbar-nav li {
@@ -120,12 +131,15 @@ nav {
   height: 50px;
   background: rgba(45, 44, 48, 0.4862745098);
   color: white;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
   line-height: 30px;
 }
 
 .btn-default:hover {
   color: black;
+  background: -o-linear-gradient(236deg, rgb(35, 54, 196) 0%, rgb(31, 127, 215) 21%, rgb(5, 228, 207) 100%);
   background: linear-gradient(214deg, rgb(35, 54, 196) 0%, rgb(31, 127, 215) 21%, rgb(5, 228, 207) 100%);
 }
 
@@ -133,7 +147,8 @@ nav {
   height: 50px;
   width: 50px;
   background: rgba(45, 44, 48, 0.4862745098);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   border-radius: 100px;
   margin-left: 5px;
   font-size: 22px;
@@ -153,6 +168,8 @@ nav {
 }
 
 .inline-elements {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -162,8 +179,11 @@ nav {
 
 .btn-updated, .btn-sign-updated {
   background: rgb(35, 54, 196);
+  background: -o-linear-gradient(236deg, rgb(35, 54, 196) 0%, rgb(31, 127, 215) 21%, rgb(5, 228, 207) 100%);
   background: linear-gradient(214deg, rgb(35, 54, 196) 0%, rgb(31, 127, 215) 21%, rgb(5, 228, 207) 100%);
   color: #000;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -173,9 +193,16 @@ nav {
 }
 
 .blockchains-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: left;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
 }
 .blockchains-icons img {
   width: 50px;
@@ -193,11 +220,18 @@ nav {
   width: 100%;
   border-radius: 20px;
   background: rgba(45, 44, 48, 0.2);
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   padding: 10px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .advantage-item {
@@ -217,9 +251,16 @@ nav {
 }
 
 .addition-features-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 150px;
 }
 .addition-features-cards > :first-child {
@@ -229,7 +270,8 @@ nav {
 .addition-features-card {
   padding: 30px 30px;
   background: rgba(45, 44, 48, 0.2);
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   border-radius: 20px;
   width: 400px;
   margin-left: 20px;
@@ -264,16 +306,23 @@ nav {
 }
 
 .arp-btn-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-self: center;
-  justify-content: end;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
 
 .apr-item {
   width: 320px;
   margin: 20px;
   background: rgba(45, 44, 48, 0.2);
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   min-height: 200px;
   border-radius: 20px;
   overflow: hidden;
@@ -281,9 +330,14 @@ nav {
 
 .apr-items {
   margin: 40px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .section-fourth-screen .btn-sign span {
@@ -292,24 +346,34 @@ nav {
 
 .arp-item-top {
   font-size: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 20px 5px;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 100%;
 }
 
 .arp-item-bottom {
   font-size: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
   padding: 20px 5px;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 100%;
 }
 .arp-item-bottom img {
   width: 100px;
   height: auto;
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+          transform: scale(1.5);
   position: relative;
   left: 20px;
   top: 30px;
@@ -334,7 +398,8 @@ nav {
   width: 100%;
   padding: 30px;
   background: rgba(45, 44, 48, 0.4862745098);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   border-radius: 20px;
   margin-top: 50px;
 }
@@ -342,22 +407,44 @@ nav {
 .trade-platform {
   width: 100%;
   border-radius: 20px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
 }
 
 .trade-platform:hover {
-  transform: scale(1.04, 1.055);
+  -webkit-transform: scale(1.04, 1.055);
+      -ms-transform: scale(1.04, 1.055);
+          transform: scale(1.04, 1.055);
+}
+
+@-webkit-keyframes move {
+  from {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  50% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
 }
 
 @keyframes move {
   from {
-    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
   50% {
-    transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
   }
   100% {
-    transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
 }
 .section-sixth-screen {
@@ -373,13 +460,15 @@ nav {
   margin-bottom: 50px;
   overflow: visible;
   white-space: nowrap;
-  animation: move 40s linear infinite;
+  -webkit-animation: move 40s linear infinite;
+          animation: move 40s linear infinite;
 }
 
 .partners-item {
   display: inline-block;
   background: rgba(45, 44, 48, 0.4862745098);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   border-radius: 10px;
   margin: 0px 20px;
   width: 250px;
@@ -391,7 +480,9 @@ nav {
   width: 65%;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .section-seventh-screen {
@@ -405,18 +496,30 @@ nav {
 }
 
 .socials-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   height: 100%;
 }
 
 .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 20px;
   background: rgba(45, 44, 48, 0.4862745098);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   border-radius: 10px;
   width: 280px;
   margin: 10px;
@@ -440,7 +543,8 @@ nav {
   width: 100%;
   padding: 40px;
   background: rgba(45, 44, 48, 0.4862745098);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   border-radius: 10px;
 }
 
@@ -501,7 +605,8 @@ footer {
   margin-top: 150px;
   margin-bottom: 50px;
   background: rgba(45, 44, 48, 0.4862745098);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   padding: 40px !important;
   border-radius: 20px;
 }
@@ -526,9 +631,16 @@ footer a {
 }
 
 .footer-low-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .copyright {
@@ -601,12 +713,15 @@ footer a {
     font-size: 50px !important;
   }
   .advantages {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 @media screen and (max-width: 992px) {
   .addition-features-cards {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .addition-features-cards .addition-features-card {
     width: 320px;
@@ -625,7 +740,8 @@ footer a {
     width: 400px;
   }
   .advantages {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .advantages .advantage-item {
     width: 300px;
@@ -638,20 +754,34 @@ footer a {
   }
   .section-seventh-screen .socials-link .social {
     width: 328px;
-    flex-direction: row;
-    justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   nav .navbar-collapse {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   nav .d-flex {
     margin-top: 0px !important;
   }
   nav .navbar-nav {
-    flex-direction: row !important;
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
     margin-top: 20px;
     margin-bottom: 20px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
   }
 }
@@ -684,7 +814,9 @@ footer a {
     max-width: 490px;
   }
   .blockchains-icons, .inline-elements {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .break-line {
     display: none;
@@ -743,8 +875,12 @@ footer a {
     left: 19px;
   }
   .contact-form form .inline-elements {
-    flex-direction: row;
-    flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .contact-form form .btn-default {
     width: calc(100% - 65px);
@@ -810,7 +946,9 @@ footer a {
     height: 36px;
   }
   .social-top {
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
   }
 }
 @media screen and (max-width: 430px) {
@@ -849,5 +987,3 @@ footer a {
     width: 80px;
   }
 }
-
-/*# sourceMappingURL=style.css.map */
