--- a/css/style.css
+++ b/css/style.css
@@ -546,6 +546,7 @@ footer a {
   .addition-features-card {
     margin-left: 10px;
     margin-right: 10px;
+    position: relative;
   }
   .addition-features-card .inline-elements {
     position: absolute;
@@ -766,10 +767,13 @@ footer a {
   nav .navbar-nav {
     margin-left: auto;
   }
+  nav .btn-sign {
+    position: relative;
+  }
   nav .btn-sign span {
     position: absolute;
-    top: 13px;
-    left: 13px;
+    top: 14px;
+    left: 17px;
   }
 }
 @media screen and (max-width: 576px) {
