--- a/sass/style.scss
+++ b/sass/style.scss
@@ -896,6 +896,9 @@ footer{
             }
         }
     }
+    .background-wrapper{
+        background-image: url("../assets/bg-mob.png");
+    }
     
 }
 
