--- a/css/style.css
+++ b/css/style.css
@@ -782,6 +782,12 @@ footer a {
     margin-right: auto;
     text-align: center;
   }
+  h3 {
+    font-size: 38px !important;
+  }
+  .apr-header .btn-sign span {
+    left: 0px;
+  }
   .arp-item-bottom img {
     left: 34px;
   }
@@ -820,11 +826,22 @@ footer a {
   .social-top {
     align-self: center;
   }
+  .advantages .advantage-item {
+    border-bottom: 1px dotted #aeaeae;
+  }
+  .advantages .advantage-item:last-child {
+    border-bottom: none !important;
+  }
 }
 @media screen and (max-width: 430px) {
   .section-seventh-screen .socials-link .social .btn-default {
     width: 120px;
     padding: 10px 10px;
+  }
+  .apr-header h3 {
+    max-width: 325px;
+    margin-left: auto;
+    margin-right: auto;
   }
   nav .nav-item {
     width: 64px;
